src/snapshots/droid_tui__regression__visual_graph_latency_backedge_snapshot@graph_latency_backedge_classic_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│     DROID: graph_latency_backedge    │
└──────────────────────────────────────┘



┌(unnamed)─────────────────────────────┐
│                                      │
│                ╭lfo─────────────────╮│
│                │                    ││
│                ◉─┐        ┌─────────●│
│                │ │        │         ││
│                ╰────────────────────╯│
│                  │        │          │
╭button──────────────╮      │          │
│                  │ │      │          │
│                  └─●      │          │
│                   ││      │          │
╰────────────────────╯      │          │
│                  ╭contour────────────╮
│                  ││       │          │
│                  ◉────────┘          │
│                  │                   │
│                  ╰───────────────────╯
│                                      │
│                                      │
╭p2b8────────────────╮                 │
│                    │                 │
│                    │                 │
│                    │                 │
╰────────────────────╯                 │
│                                      │
└──────────────────────────────────────┘




┌──────────────────────────────────────┐
│Loaded graph_latency_backedge | Render│
└──────────────────────────────────────┘
