src/snapshots/droid_tui__regression__visual_graph_latency_backedge_snapshot@graph_latency_backedge_mono_40.snap
---
source: src/regression.rs
assertion_line: 3363
expression: ansi
---
┌──────────────────────────────────────┐
│     DROID: graph_latency_backedge    │
└──────────────────────────────────────┘



┌(unnamed)─────────────────────────────┐
│                                      │
│                ╭lfo─────────────────╮│
│                │                    ││
│                ◉─┐        ┌─────────●│
│                │ │        │         ││
│                ╰────────────────────╯│
│                  │        │          │
╭button──────────────╮      │          │
│                  │ │      │          │
│                  └─●      │          │
│                   ││      │          │
╰────────────────────╯      │          │
│                  ╭contour────────────╮
│                  ││       │          │
│                  ◉────────┘          │
│                  │                   │
│                  ╰───────────────────╯
│                                      │
│                                      │
╭p2b8────────────────╮                 │
│                    │                 │
│                    │                 │
│                    │                 │
╰────────────────────╯                 │
│                                      │
└──────────────────────────────────────┘




┌──────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | │
└──────────────────────────────────────┘
