src/snapshots/droid_tui__regression__visual_graph_latency_backedge_snapshot@graph_latency_backedge_terminal_160.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                 DROID: graph_latency_backedge                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┌(unnamed)──────────────────────────────────────────────────────┐
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────│┌ Graph ───────────────────────────────────────────────────────│
│◉◉┐                                                                                           ││                                       ╭contour─────────────╮ │
│…0%                                                                                           ││                                       │                    │ │
││ │                                                                                           ││                              ┌────────◉───┐                │ │
││ │                                                                                           ││╭button──────────────╮        │        │   │                │ │
││ │                                                                                           │││                    │        │        ╰────────────────────╯ │
││ │                                                                                           │││                    ●──┐─────┘            │                  │
││ │                                                                                           │││                    │  │                  │                  │
││ │                                                                                           ││╰────────────────────╯  │                  │                  │
││ │                                                                                           ││                        │                  │                  │
││ │                                                                                           ││                        │                  │                  │
│○○│                                                                                           ││                        │                  │                  │
│……│                                                                                           ││                        │                  │                  │
││ │                                                                                           ││                        │                  │                  │
││ │                                                                                           ││                        │                  │                  │
│○○│                                                                                           ││                        │                  │                  │
│○○│                                                                                           ││                        │                  │                  │
││ │                                                                                           ││                        │                  │                  │
││ │                                                                                           ││                        │  ╭lfo─────────────────╮             │
││ │                                                                                           ││                        │  │               │    │             │
│○○│                                                                                           ││                        └──◉               └────●             │
│……│                                                                                           ││                           │                    │             │
││ │                                                                                           ││                           ╰────────────────────╯             │
││ │                                                                                           ││                                                              │
│○○│                                                                                           ││                                                              │
│○○│                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││      ╭p2b8────────────────╮                                  │
││ │                                                                                           ││      │                    │                                  │
││ │                                                                                           ││      │                    │                                  │
││ │                                                                                           ││      │                    │                                  │
│└─┘                                                                                           ││      ╰────────────────────╯                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────│└──────────────────────────────────────────────────────────────│
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_backedge | Renders degraded at 160 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 1 back edge(s) | │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
