src/snapshots/droid_tui__regression__visual_graph_latency_backedge_snapshot@graph_latency_backedge_terminal_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
┌(unnamed)─────────────────────────────┐
│──────────────────────────────────────│
│                 ╭lfo─────────────────╮
│                 │                    │
│                 ◉┐         ┌─────────●
│                 ││         │         │
│                 ╰────────────────────╯
╭button──────────────╮       │         │
│                  │ │       │         │
│                  └─●       │         │
│                   ││       │         │
╰────────────────────╯       │         │
│                   ╭contour───────────╮
│                   │        │         │
│                   ◉────────┘         │
│                   │                  │
│                   ╰──────────────────╯
│                                      │
│                                      │
│╭p2b8────────────────╮                │
││                    │                │
││                    │                │
││                    │                │
│╰────────────────────╯                │
│                                      │
└──────────────────────────────────────┘










┌──────────────────────────────────────┐
│Loaded graph_latency_backedge | Render│
└──────────────────────────────────────┘
