src/snapshots/droid_tui__regression__visual_graph_latency_chain_snapshot@graph_latency_chain_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                              DROID: graph_latency_chain                                              │
└──────────────────────────────────────────────────────────────────────┌(unnamed)──────────────────────────────────────┐
┌ Panels ──────────────────────────────────────────────────────────────│┌ Graph ───────────────────────────────────────│
│◉◉┐                                                                   ││╭clocktool───────────╮                        │
│…0%                                                                   │││                   ╭copy──────────────╭mixer╮│
││ │                                                                   │││                   │●                 │ │   ││
││ │                                                                   │││                   ◉│                 ◉─●   ●│
││ │                                                                   ││╰───────────────────│╯                 │ │   ││
││ │                                                                   ││                    ╰──────────────────╰─────╯│
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
│○○│                                                                   ││                                              │
│……│                                                                   ││                                              │
││ │                                                                   ││          ╭p2b8────────────────╮              │
││ │                                                                   ││          │                    │              │
│○○│                                                                   ││          │                    │              │
│○○│                                                                   ││          │                    │              │
││ │                                                                   ││          ╰────────────────────╯              │
││ │                                                                   ││                                              │
││ │                                                                   └───────────────────────────────────────────────┘
│○○│                                                                   ││                                              │
│……│                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
│○○│                                                                   ││                                              │
│○○│                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
││ │                                                                   ││                                              │
│└─┘                                                                   ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_chain | Renders degraded at 120 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max 0.0│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
