src/snapshots/droid_tui__regression__visual_graph_latency_chain_snapshot@graph_latency_chain_classic_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
┌(unnamed)─────────────────────────────┐
│──────────────────────────────────────│
╭clocktool───────────╮                 │
│                   ╭copy──────────────╭
│                   │●                 │
│                   ◉│                 ●
╰───────────────────│╯                 │
│                   ╰──────────────────╰
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│         ╭p2b8────────────────╮       │
│         │                    │       │
│         │                    │       │
│         │                    │       │
│         ╰────────────────────╯       │
│                                      │
└──────────────────────────────────────┘















┌──────────────────────────────────────┐
│Loaded graph_latency_chain | Renders d│
└──────────────────────────────────────┘
