src/snapshots/droid_tui__regression__visual_graph_latency_chain_snapshot@graph_latency_chain_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
┌(unnamed)─────────────────────────────────────────────────────────────────────────────────────────┐
│──────────────────────────────────────────────────────────────────────────────────────────────────│
╭p2b8────────────────╮                                                                             │
│                    │                                                                             │
│                    │                                                                             │
│                    │                                                                             │
╰────────────────────╯                                                                             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                              ╭copy────────────────╮                                              │
│                              │                    │                                              │
│                              ◉                    ●┐                                             │
│                              │                    ││                                             │
│                              ╰────────────────────╯│                                             │
│                              │                     │                                             │
│                              │                     │                                             │
│                              │                     │╭mixer───────────────╮                       │
│                              │                     ││                    │                       │
│                              │                     └◉                    ●┐                      │
│                              │                      │                    ││ ╭contour─────────────╮
│                              │                      ╰────────────────────╯│ │                    │
│                              │                                            └─◉                    │
│                              │                                              │                    │
│                              │                                              ╰────────────────────╯
│                              │                                                                   │
│          ╭clocktool───────────╮                                                                  │
│          │                   ││                                                                  │
│          │                   └●                                                                  │
│          │                    │                                                                  │
│          ╰────────────────────╯                                                                  │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
